[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Space Background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://assets/edge.png" type="Texture" id=3]
[ext_resource path="res://assets/Strip And GIF/space7_4-frames.png" type="Texture" id=4]
[ext_resource path="res://Scenes/1PShipWrapper.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "pulse"
length = 0.46
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "pulse"
length = 0.46
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "pulse"
length = 0.46
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=28]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "pulse"
length = 0.46
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=32]
resource_name = "flikr"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.125, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 2000, 1000 )
z_index = 1

[node name="LeftBounds" type="Area2D" parent="."]
position = Vector2( 0, -241 )

[node name="Sprite" type="Sprite" parent="LeftBounds"]
position = Vector2( -3014, 29365 )
scale = Vector2( 30, 30 )
z_index = -3
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftBounds/Sprite"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 3 )
anims/flikr = SubResource( 4 )

[node name="Sprite2" type="Sprite" parent="LeftBounds"]
position = Vector2( -129, 29374.4 )
rotation = -3.14159
scale = Vector2( 2, 2.00116 )
z_index = -1
texture = ExtResource( 3 )
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 60000 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftBounds/Sprite2"]
autoplay = "pulse"
anims/RESET = SubResource( 1 )
anims/pulse = SubResource( 2 )

[node name="Sprite3" type="Sprite" parent="LeftBounds"]
position = Vector2( -1094, 29315.5 )
scale = Vector2( 30, 31.0295 )
z_index = -1
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftBounds/Sprite3"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 5 )
anims/flikr = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftBounds"]
polygon = PoolVector2Array( -93, -263, -93, 59314, -271, 59397, -275, -333 )

[node name="RightBounds" type="Area2D" parent="."]
position = Vector2( 59124, 58781 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RightBounds"]
position = Vector2( -3014, 29365 )
scale = Vector2( 30, 30 )
z_index = -3
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightBounds/Sprite"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 15 )
anims/flikr = SubResource( 16 )

[node name="Sprite2" type="Sprite" parent="RightBounds"]
position = Vector2( -129, 29374.4 )
rotation = -3.14159
scale = Vector2( 2, 2.00116 )
z_index = -1
texture = ExtResource( 3 )
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 60000 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightBounds/Sprite2"]
autoplay = "pulse"
anims/RESET = SubResource( 17 )
anims/pulse = SubResource( 18 )

[node name="Sprite3" type="Sprite" parent="RightBounds"]
position = Vector2( -1094, 29336.9 )
scale = Vector2( 30, 30.915 )
z_index = -1
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightBounds/Sprite3"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 19 )
anims/flikr = SubResource( 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightBounds"]
polygon = PoolVector2Array( -90.1484, 59272, -271.148, 59386, -250, -421.004, -88, -297 )

[node name="TopBounds" type="Area2D" parent="."]
position = Vector2( 58975, -409 )
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="TopBounds"]
position = Vector2( -3014, 29365 )
scale = Vector2( 30, 30 )
z_index = -3
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TopBounds/Sprite"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 21 )
anims/flikr = SubResource( 22 )

[node name="Sprite2" type="Sprite" parent="TopBounds"]
position = Vector2( -129, 29374.4 )
rotation = -3.14159
scale = Vector2( 2, 2.00116 )
z_index = -2
texture = ExtResource( 3 )
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 60000 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TopBounds/Sprite2"]
autoplay = "pulse"
anims/RESET = SubResource( 23 )
anims/pulse = SubResource( 24 )

[node name="Sprite3" type="Sprite" parent="TopBounds"]
position = Vector2( -1094, 29359 )
scale = Vector2( 30, 31.0848 )
z_index = -1
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TopBounds/Sprite3"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 25 )
anims/flikr = SubResource( 26 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TopBounds"]
polygon = PoolVector2Array( -96.7861, 59072, -205.786, 59141, -279.001, -400.996, -90.0009, -238 )

[node name="BottomBounds" type="Area2D" parent="."]
position = Vector2( 75, 58988 )
rotation = 4.71239
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BottomBounds"]
position = Vector2( -3014, 29365 )
scale = Vector2( 30, 30 )
z_index = -3
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BottomBounds/Sprite"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 27 )
anims/flikr = SubResource( 28 )

[node name="Sprite2" type="Sprite" parent="BottomBounds"]
position = Vector2( -129, 29374.4 )
rotation = -3.14159
scale = Vector2( 2, 2.00116 )
z_index = -3
texture = ExtResource( 3 )
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 60000 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BottomBounds/Sprite2"]
autoplay = "pulse"
anims/RESET = SubResource( 29 )
anims/pulse = SubResource( 30 )

[node name="Sprite3" type="Sprite" parent="BottomBounds"]
position = Vector2( -1094, 29445.8 )
scale = Vector2( 30, 30.7028 )
z_index = -1
texture = ExtResource( 4 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 256, 2000 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BottomBounds/Sprite3"]
autoplay = "flikr"
playback_speed = 0.1
anims/RESET = SubResource( 31 )
anims/flikr = SubResource( 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BottomBounds"]
polygon = PoolVector2Array( -97.9414, 59129, -237.941, 59224, -249, -309, -88, -159, -78.9414, 59119 )

[node name="PlayArea" type="Area2D" parent="."]
position = Vector2( 0, -96 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite4" type="Sprite" parent="PlayArea"]
position = Vector2( 29517, 29485 )
scale = Vector2( 20, 20 )
z_index = -3
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 2999.33, 3000.93 )
region_filter_clip = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
